--- a/slides/1.course-intro.html
+++ b/slides/1.course-intro.html
@@ -123,7 +123,7 @@ template: you
 
 --
 
-- Web development
+- Web application development
 
 --
 
@@ -131,7 +131,7 @@ template: you
 
 --
 
-- How to work collaboratively in a team over a long time
+- How to work collaboratively and harmoniously in a team over a long time
 
 --
 
