--- a/slides/10.github-for-collaboration.html
+++ b/slides/10.github-for-collaboration.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # GitHub for Collaboration
 
-Agile Software Development & DevOps
+More nuanced usage of GitHub for developer collaboration.
 
 ---
 
