--- a/slides/16.build-tools.html
+++ b/slides/16.build-tools.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Build Tools
 
-Agile Software Development & DevOps
+System building in preparation for execution.
 
 ---
 
