--- a/slides/16.express.html
+++ b/slides/16.express.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Express.js
 
-throw together a quick web server
+Throw together a quick Javascript-based web server.
 
 ---
 
