--- a/slides/17.data-storage.html
+++ b/slides/17.data-storage.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Data Storage For Apps
 
-Agile Software Development & DevOps
+Various mechanisms for storing data in front- and back-ends.
 
 ---
 
