--- a/slides/19.user-experience-design.html
+++ b/slides/19.user-experience-design.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # User Experience Design
 
-Agile Software Development & DevOps
+Ensuring software will work for the people who will use it.
 
 ---
 
