--- a/slides/20.deployment.html
+++ b/slides/20.deployment.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Deployment
 
-Agile Software Development & DevOps
+Making an application live and available to its users.
 
 ---
 
