--- a/slides/21.containers.html
+++ b/slides/21.containers.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Containers
 
-Agile Software Development & DevOps
+Standardized efficient highly-portable boxes within which to run software.
 
 ---
 
