--- a/slides/22.change-management.html
+++ b/slides/22.change-management.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Change Management
 
-Agile Software Development & DevOps
+Streamlining the need for bug fixes and new feature requests.
 
 ---
 
