--- a/slides/23.release-management.html
+++ b/slides/23.release-management.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Release Management
 
-Agile Software Development & DevOps
+An organized approach to versioning software releases.
 
 ---
 
