--- a/slides/5.git-and-github.html
+++ b/slides/5.git-and-github.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Git and GitHub
 
-Enabling distributed cooperation on software projects
+Enabling distributed cooperation on software projects.
 
 ---
 
