--- a/slides/6.requirements-engineering.html
+++ b/slides/6.requirements-engineering.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Requirements Engineering
 
-Agile Software Development & DevOps
+A disciplined approach to figuring out what needs to be done.
 
 ---
 
