--- a/slides/7.domain-modeling.html
+++ b/slides/7.domain-modeling.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Domain Modeling
 
-Agile Software Development & DevOps
+Identifying the entities existent in a problem space.
 
 ---
 
