--- a/slides/7.javascript-basics.html
+++ b/slides/7.javascript-basics.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Javascript Crash Course
 
-for programmers of other languages
+For programmers of other languages.
 
 ---
 
