--- a/slides/8.react-intro.html
+++ b/slides/8.react-intro.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # React.js Crash Course
 
-for people who want to make something appear in a browser, but don't want to write HTML & CSS code
+For people who want to make something appear in a browser, but don't want to write HTML & CSS code.
 
 ---
 
