--- a/slides/8.uml-diagrams.html
+++ b/slides/8.uml-diagrams.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # UML Diagrams
 
-Agile Software Development & DevOps
+Standardized ways of diagramming software systems.
 
 ---
 
