--- a/slides/12.software-testing.html
+++ b/slides/12.software-testing.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Software Testing
 
-Agile Software Development & DevOps
+Validating the functionality of a codebase.
 
 ---
 
