--- a/slides/9.team-psychology.html
+++ b/slides/9.team-psychology.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Team Psychology
 
-Agile Software Development & DevOps
+How people think and how that affects cooperation.
 
 ---
 
