better formatting of headings

--- a/slides/23.release-management.html
+++ b/slides/23.release-management.html
@@ -59,7 +59,7 @@ The date on which a release is published is often dependent upon a number of fac
 - the release schedules of technical dependencies
 - the release schedules of the competition
 - marketing parternships and promotions
-- business reasons why one particular date might be better than another (e.g. [using [predictive analytics](https://en.wikipedia.org/wiki/Predictive_analytics))
+- business reasons why one particular date might be better than another
 
 ---
 
