--- a/slides/14.feature-branch-git-workflow.html
+++ b/slides/14.feature-branch-git-workflow.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Feature Branch Version Control Workflow
 
-A simple workflow to avoid developer code conflicts.
+Working on code in isolation and incorporating peer review
 
 ---
 
