--- a/slides/22.change-management.html
+++ b/slides/22.change-management.html
@@ -8,7 +8,7 @@ class: center, middle
 
 # Change Management
 
-Streamlining the need for bug fixes and new feature requests.
+Maintaining the orderly evolution of a project after launch
 
 ---
 
@@ -20,12 +20,11 @@ Streamlining the need for bug fixes and new feature requests.
 
 ---
 
-class: center, middle
 name: overview
 
 # Overview
 
----
+--
 
 ## Concept
 
@@ -39,12 +38,11 @@ Changes are typically required for one of a few reasons:
 
 ---
 
-class: center, middle
 name: phases
 
 # Five Phases
 
----
+--
 
 ## Concept
 
@@ -58,6 +56,8 @@ Work on any given change request goes through each of several phases
 
 ---
 
+template: phases
+
 ## Phase 1: Submission
 
 Most change management systems allow their stakeholders to submit '**change requests**' using a form.
@@ -66,6 +66,8 @@ Most change management systems allow their stakeholders to submit '**change requ
 - All metadata details of the change request are logged - date/time, author, type, status, etc.
 
 ---
+
+template: phases
 
 ## Phase 2: Validation
 
@@ -79,6 +81,8 @@ Common reasons for invalidity of a change request:
 
 ---
 
+template: phases
+
 ## Phase 3: Assessment
 
 The time, effort and ultimately cost of implementing the change is estimated.
@@ -87,6 +91,8 @@ The time, effort and ultimately cost of implementing the change is estimated.
 - includes estimates of work for all components/systems that may be impacted by proposed changes
 
 ---
+
+template: phases
 
 ## Phase 4: Feasibility
 
@@ -102,6 +108,8 @@ Questions typically asked to help answer that question:
 
 ---
 
+template: phases
+
 ## Phase 5: Implementation
 
 If deemed feasible, the developers implement the change the usual way.
@@ -111,7 +119,6 @@ The status of the change request is updated as necessary.
 ---
 
 name: conclusions
-class: center, middle
 
 # Conclusions
 
