--- a/slides/6.requirements-engineering.html
+++ b/slides/6.requirements-engineering.html
@@ -23,27 +23,21 @@ A disciplined approach to figuring out what needs to be done.
 
 ---
 
-class: center, middle
 name: overview
 
 # Overview
 
----
-
-# Overview
+--
 
 Requirements engineering is the disciplined process of defining what a project requires to be done and how it must be done.
 
 ---
 
-class: center, middle
 name: motivations
 
 # Motivations
 
----
-
-# Motivations
+--
 
 Requirements provide several benefits to a project:
 
@@ -54,14 +48,11 @@ Requirements provide several benefits to a project:
 
 ---
 
-class: center, middle
 name: types
 
 # Types
 
----
-
-# Types
+--
 
 There are two top-level categories of requirements:
 
@@ -70,7 +61,7 @@ There are two top-level categories of requirements:
 
 ---
 
-# Types
+template: types
 
 ## Functional requirements
 
@@ -82,7 +73,7 @@ Functional requirements describe what the system must do, in layman's terms, inc
 
 ---
 
-# Types
+template: types
 
 ## Non-functional requirements
 
@@ -96,14 +87,11 @@ Non-functional requirements specify constraints on either the system or the deve
 
 ---
 
-class: center, middle
 name: user-requirements
 
 # User Requirements
 
----
-
-# User Requirements
+--
 
 A type of functional requirement focused on the user experience.
 
@@ -116,7 +104,7 @@ There are two popular ways of writing user requirements:
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## Use Cases
 
@@ -126,7 +114,7 @@ A list of actions and events involved in a specific user interaction.
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## Use Cases
 
@@ -138,7 +126,7 @@ At a minimum contains:
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## Use Cases
 
@@ -152,7 +140,7 @@ Example:
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## Use Cases
 
@@ -162,7 +150,7 @@ Written use cases often are accompanied by a Unified Modeling Diagram Language (
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## User Stories
 
@@ -176,7 +164,7 @@ As a **, I want **, so I can \_\_.
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## User Stories
 
@@ -187,7 +175,7 @@ Each User Story also includes:
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## User Stories
 
@@ -208,7 +196,7 @@ Example:
 
 ---
 
-# User Requirements
+template: user-requirements
 
 ## Use Cases vs. User Stories
 
@@ -216,24 +204,39 @@ Example:
 
 ---
 
-class: center, middle
+
 name: elicitation
 
 # Elicitation
 
 ---
 
-# Elicitation
+template: elicitation
+
+## Motivation
+
+What does it mean to "elicit" requirements?
+
+- engage stakeholders in a dialog
+- give them the opportunity and space to formulate and evolve their thoughts
+- progressively elaborate on their ideas until a clear picture of the project emerges
+- engage them as collaborative partners in the process
+
+---
+
+template: elicitation
+
+## Techniques
 
 How do you gather requirements?
 
 - Interviews
 - Observatiion
-- Intuition
+- Intuition & brainstorming
 
 ---
 
-# Elicitation
+template: elicitation
 
 ## Interviews
 
@@ -244,9 +247,9 @@ It would typically be a mistake not to interview:
 
 ---
 
-# Elicitation
+template: elicitation
 
-## Interviews
+## Interviews (continued)
 
 An interview can either be conducted in an _open_ or _closed_ manner.
 
@@ -255,7 +258,24 @@ An interview can either be conducted in an _open_ or _closed_ manner.
 
 ---
 
-# Elicitation
+template: elicitation
+
+## Interviews (continued again)
+
+Start broad:
+- What problem does this product solve from a business perspective?  
+- What opportunity does it take advantage of?
+
+Go deeper:
+- Who the users are and what their goals and challenges might be interacting the product.
+- For each type of user, what specific functionality do they need to achieve each of those goals.
+
+Very detailed:
+- establish any and all remaining thoughts of what the user needs and how the system must work technically.
+
+---
+
+template: elicitation
 
 ## Observation
 
@@ -267,9 +287,10 @@ Observing end-users achieving their goals without your system, such as with...
 
 ---
 
-# Elicitation
 
-## Observation
+template: elicitation
+
+## Observation (again)
 
 Similarly to interviews, observation can either be active or passive.
 
@@ -278,15 +299,17 @@ Similarly to interviews, observation can either be active or passive.
 
 ---
 
-# Elicitation
+template: elicitation
 
-## Intuition
+## Intuition & brainstorming
 
 Realistically, a requirements engineer (who may also be a software engineer) already has preeconceived notions of what users might want to do with the system based on their experience.
 
+- Running brainstorming workshops where the requirements engineer asks the group about certain requirements that the engineer has already intuited can help build agreement on a pre-conceived plan.
+
 ---
 
-class: center, middle
+
 name: conclusions
 
 # Conclusions
